--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\202008011413031_AddCustomers.designer.cs">
       <DependentUpon>202008011413031_AddCustomers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202008021247003_AddedOreders.cs" />
+    <Compile Include="Migrations\202008021247003_AddedOreders.designer.cs">
+      <DependentUpon>202008021247003_AddedOreders.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -87,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202008011413031_AddCustomers.resx">
       <DependentUpon>202008011413031_AddCustomers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202008021247003_AddedOreders.resx">
+      <DependentUpon>202008021247003_AddedOreders.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
